--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "uuid": "^11.0.5",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
